feat(slider): Extract image slider component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,3 @@
 <app-ticker [text]="tickerItems[0].tickerItem"></app-ticker>
 
-<div class="slider" *ngIf="currentNews as news">
-
-  <div class="slider-main">
-
-    <div class="slider-image-wrapper">
-      <img
-        class="slider-image"
-        (click)="showImageDetails(currentNews)"
-        [src]="imagePath(news)"
-        [alt]="news.title || 'Image'"
-      />
-
-      <button class="slider-arrow left" type="button" (click)="prev()">
-        ‹
-      </button>
-      <button class="slider-arrow right" type="button" (click)="next()">
-        ›
-      </button>
-    </div>
-
-    <div class="slider-bottom">
-      <div class="slider-dots" *ngIf="carouselItems.length > 1">
-        test
-        <button
-          *ngFor="let news of carouselItems; let i = index; trackBy: trackByIndex"
-          type="button"
-          class="dot"
-          [class.active]="i === currentIndex"
-          (click)="goTo(i)"
-        ></button>
-      </div>
-
-      <div class="slider-caption">
-        <h2 class="slider-title">{{ news.title }}</h2>
-      </div>
-    </div>
-  </div>
-
-  <div class="slider-thumbs" *ngIf="carouselItems.length > 1">
-    <button
-      *ngFor="let news of carouselItems; let i = index; trackBy: trackByIndex"
-      #thumbBtn
-      type="button"
-      class="thumb"
-      [class.active]="i === currentIndex"
-      (click)="goTo(i)">
-        <img [src]="imagePath(news)" [alt]="news.title || 'Thumb'" />
-    </button>
-  </div>
-</div>
-
-<div class="slider slider-empty" *ngIf="!carouselItems || carouselItems.length === 0">
-  <p>Noch keine News vorhanden.</p>
-</div>
+<app-imageslider [carouselItems]="carouselItems$ | async"></app-imageslider>
