feat(slider): Add animation & swipe behavior

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <app-ticker [text]="tickerItems[0].tickerItem"></app-ticker>
 
-<app-imageslider [carouselItems]="carouselItems$ | async"></app-imageslider>
+<app-imageslider [carouselItems]="carouselItems$ | async" [showDots]="false"></app-imageslider>
