--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -70,13 +70,12 @@
           <button mat-menu-item routerLink="/social/2018-2019">Saison 2018/2019</button>
           <button mat-menu-item routerLink="/social/2017-2018">Saison 2017/2018</button>
       </mat-menu>
-
-      <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
 
+      <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <button mat-menu-item [matMenuTriggerFor]="advent"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
       <mat-menu #advent="matMenu">
         <button mat-menu-item routerLink="/advent/2021">Advent 2021</button>
@@ -144,7 +143,6 @@
           <button mat-menu-item routerLink="/social/2017-2018">Saison 2017/2018</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
@@ -152,7 +150,8 @@
 
       <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
 
-      <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>menu</mat-icon></button>
+      <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>more_horiz</mat-icon></button>
+
       <mat-menu x-position="before" #more="matMenu">
         <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
         <mat-menu #goaloftheseason="matMenu">
@@ -168,6 +167,7 @@
           <button mat-menu-item routerLink="/playeroftheseason/2025">Spieler des Jahres 2025</button>
         </mat-menu>
 
+        <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
         <button mat-menu-item [matMenuTriggerFor]="advent"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
             <mat-menu #advent="matMenu">
               <button mat-menu-item routerLink="/advent/2021">Advent 2021</button>
